--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 server.port=8002
+
+spring.datasource.url=jdbc:mysql://localhost:3306/training
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql = true
+spring.sql.init.mode=always
